<resources>
    <string name="app_name">WhereSports</string>
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_map">Map</string>
    <string name="bottom_navigation_menu_account">Account</string>
    <string name="bottom_navigation_menu_chat">Chat</string>
    <string name="title_activity_main_activiy">main_activiy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="facebook_app_id">298040347653666</string>
    <string name="fb_login_protocol_scheme">fb298040347653666</string>
    <string name="resetPassword">
        Please supply your email. You will receive an email in order to reset your password.
    </string>
    <string name="client_id">314370239409-n8rhasb1b0pfjjm2f13qq6du7e0mho5m.apps.googleusercontent.com</string>
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string name="description_test">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque rutrum velit eget felis tempus, a
        fringilla mi feugiat. Nullam ac augue ut sapien pharetra tincidunt. Praesent luctus nisi ut risus consequat
        pulvinar. Pellentesque hendrerit vitae sed.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_drawer_profil">My profile</string>
    <string name="menu_drawer_events">My events</string>
    <string name="menu_drawer_friends">My friends</string>
    <string name="menu_drawer_notifications_push">Notifications push</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_contact">About Us</string>
    <string name="menu_drawer_terms_of_use">Terms of Use</string>
    <string name="menu_drawer_advise">Advise this application</string>
    <string name="menu_drawer_logout">Logout</string>
    <string name="version">Version 1.0</string>
    <string name="menu_drawer_settings_title">Settings</string>
    <string name="more">More</string>
    <string name="name_event">Event\'s name</string>
    <string name="sport_event">Sport</string>
    <string name="place_event">Place</string>
    <string name="numberOfPeople_event">Number of participants</string>
    <string name="privacy_event">Privacy</string>
    <string name="button_create_event">Create event</string>
    <string name="description_event">Description</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_nb_people_title">Number of participants</string>
    <string name="event_nb_people_message"></string>
    <string name="event_privacy_title">Privacy</string>
    <string name="event_privacy_message"></string>
    <string name="event_public">Public</string>
    <string name="event_private">Private</string>
    <string name="event_invitation">By invitations</string>
    <string name="create_event_title">Create your event</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="home_title">Home</string>
    <string name="map_title">Map</string>
    <string name="notifications_title">Notifications</string>
    <string name="discussions_title">Chats</string>
    <string name="home_coming_soon">Coming soon..</string>
    <string name="no_notification">Everyone is sleeping here. Enjoy!</string>
    <string name="notifications_all_read">Mark all as read</string>
    <string name="write_message">Write your message</string>
    <string name="search_user">Search user</string>
    <string name="search_conversation">Search conversation</string>
    <string name="friend_title">Your friends</string>
    <string name="invitation_title">Your invitations</string>
    <string name="friend_friend">Friends</string>
    <string name="friend_invitation">Invitations</string>
    <string name="events_created_title">Events created</string>
    <string name="events_joined_title">Events joined</string>
    <string name="events_created">Events created</string>
    <string name="events_joined">Events joined</string>
    <string name="filter_all_events">All events</string>
    <string name="filter_only_finished">Only finished events</string>
    <string name="filter_only_next">Only next events</string>
    <string name="events_filter_title">Filter</string>
    <string name="events_filter_message">Select a category of events</string>
    <string name="events_filter_all_events">All events</string>
    <string name="events_filter_only_finished">Only finished</string>
    <string name="events_filter_only_next">Only next</string>
    <string name="notifications_social_title">Socials notifications</string>
    <string name="notifications_events_title">Events notifications</string>
    <string name="notification_receive_invitation">Receive notification if someone invite me</string>
    <string name="notification_accept_my_invitation">Receive notification if someone accept my invitation</string>
    <string name="notifications_receive_event_invitation">Receive notification if someone invite me</string>
    <string name="notifications_accept_event_invitation">Receive notification if my participation is accepted</string>
    <string name="notification_someone_join_my_event">Receive notification if someone want join my event</string>
    <string name="notification_event_modify">Receive notification if an event is modify</string>
    <string name="notification_receive_message">Receive notification if someone send me a message</string>
    <string name="notification_title">Configure notifications</string>
    <string name="button_delete_all_notification">Delete all notifications</string>
    <string name="notifications_push_toast">Updated</string>
    <string name="football">Football</string>
    <string name="us_football">American Football</string>
    <string name="badminton">Badminton</string>
    <string name="handball">Handball</string>
    <string name="baseball">Baseball</string>
    <string name="basketball">Basketball</string>
    <string name="crossfit">Crossfit</string>
    <string name="golf">Golf</string>
    <string name="swimming">Swimming</string>
    <string name="cycling">Cycling</string>
    <string name="bodybuilding">Bodybuilding</string>
    <string name="climbing">Climbing</string>
    <string name="rugby">Rugby</string>
    <string name="volley_ball">Volley ball</string>
    <string name="tennis">Tennis</string>
    <string name="table_tennis">Table tennis</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_with_facebook">Log you with facebook</string>
    <string name="login_with_google">Log you with google</string>
    <string name="forgot">Forgot?</string>
    <string name="not_a_member">Not a member ? Join us !</string>
    <string name="login_or">Or</string>
    <string name="no_result">No result found</string>
    <string name="choose_recipient_title">Choose recipient</string>
    <string name="suggestions">Suggestions</string>
    <string name="my_personnal_information">My personnal information</string>
    <string name="user_info_description">Description</string>
    <string name="user_info_edit_account">Edit my account</string>
    <string name="user_info_delete">Delete my account</string>
    <string name="user_info_delete_dialog_title">Delete your account</string>
    <string name="user_info_delete_dialog_message">Do you really want to delete your account?</string>
    <string name="user_info_delete_dialog_yes">Yes</string>
    <string name="user_info_delete_dialog_no">No</string>
    <string name="settings">Settings</string>
    <string name="discussions_any_found">No discussion found</string>
    <string name="sports_preferences_message">Choose which sports you want to see on the map</string>
    <string name="sports_preferences_title">Your preferences</string>
    <string name="event_info_creator">Created by:</string>
    <string name="event_info_creator_you">Created by: You</string>
    <string name="event_info_invite_people">Invite friends</string>
    <string name="event_info_edit">Edit</string>
    <string name="event_info_delete">Delete</string>
    <string name="event_info_description">Description</string>
    <string name="event_info_participants">Participants</string>
    <string name="event_info_waiting">Waiting</string>
    <string name="event_info_join">Join this event</string>
    <string name="event_info_cancel">Cancel Participation</string>
    <string name="event_info_full">This event is full, you cannot join it</string>
    <string name="event_info_note">This event is finished, please give a note</string>
    <string name="event_info_accept">Accept</string>
    <string name="event_info_refuse">Refuse</string>
    <string name="event_info_share">Share your parcitipation with your friends</string>
    <string name="event_info_places">free places</string>
    <string name="event_info_place">free place</string>
    <string name="event_info_invite_friends">Invite your friends to your event</string>
    <string name="event_info_send_invitation">Invite</string>
    <string name="event_info_cancel_invitation">Cancel</string>
    <string name="event_info_cannot_invite">You cannot invite friends, your event is full</string>
    <string name="event_info_invite_toast">You have invited a friend</string>
    <string name="event_info_cancel_invitation_toast">You have canceled your invitation</string>
    <string name="event_info_create_reminder">Create a reminder for this event</string>
    <string name="modify_event_title">Modify your event</string>
    <string name="modify_event_name">Name</string>
    <string name="modify_event_sport">Sport</string>
    <string name="modify_event_description">Description</string>
    <string name="modify_event_participants">Number of participants</string>
    <string name="modify_event_privacy">Privacy</string>
    <string name="modify_event_name_alert_title">Name</string>
    <string name="modify_event_name_alert_message">Change your event\'s name</string>
    <string name="modify_event_description_alert_title">Description</string>
    <string name="about_us_text">text</string>
    <string name="about_us_contact_us">Contact us</string>
    <string name="about_us_facebook">Like on Facebook</string>
    <string name="about_us_twitter">Follow on Twitter</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="measuring_system">Measuring system</string>
    <string name="sports_title">Sports</string>
    <string name="sports">Select which sports have to be show</string>
</resources>