<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutUsActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:theme="@style/Toolbar"
            app:titleTextColor="#fff"
            tools:ignore="MissingConstraints"
            >
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/about_us_text"
                    android:textColor="@color/colorBlueGrey900"
                    />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aboutText"
                    android:id="@+id/contactUsLayout"
                    android:background="#ecf0f1"
                    >

                <RelativeLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/logoMail"
                        >
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_mail_24dp"
                            />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/logoMail"
                        android:padding="10dp"
                        >

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/about_us_contact_us"
                            />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contactUsLayout"
                    android:id="@+id/FacebookLayout"
                    android:background="#ecf0f1"
                    >

                <RelativeLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/logoFacebook"
                        >
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_facebook"
                            />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/logoFacebook"
                        android:padding="10dp"
                        >

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/about_us_facebook"
                            />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/FacebookLayout"
                    android:id="@+id/TwitterLayout"
                    android:background="#ecf0f1"
                    >

                <RelativeLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/logoTwitter"
                        >
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_twitter"
                            />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/logoTwitter"
                        android:padding="10dp"
                        >

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/about_us_twitter"
                            />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>



</RelativeLayout>